# notes

./: README.md  db.py  demo.md  main.py  pyproject.toml
static/: notes.js
templates/: base.html  login.html  signup.html
