[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^4.3.0"
CryptoBaker = "^0.7.1"
flask = "^1.1.2"
flask-cors = "^3.0.8"
markdown = "^3.2.2"
Flask-Mobility = "^1.0.0"
markdown2 = "^2.3.9"
Pygments = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
